src/test/deca/context/invalid/intermediaire2/arithmetiques/04typeErrorMul.deca
// Description:
//    Programme minimaliste assignant le résultat d'une addition (int, float) à une variable int -> erreur de typage
//
// Resultats:
//    04typeErrorMul.lis
//
// Historique:
//    cree le 09/06/2022

{
    int a = 1;
    int c = 0.5 + a;
}